hphp/hack/test/typecheck/coeffect_encapsulation/bad_constraint_nonsense.php
<?hh

<<file:__EnableUnstableFeatures('context_alias_declaration_short')>>

newctx X as [$a::C];
